# dadbot

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  run_gui.py  usage.json
config/: settings.example.yaml
src/: __init__.py  calibrate.py  config.py  detector.py  main.py  reporter.py  settings.py  tracker.py  utils.py  visualizer.py  zone_tool.py
src/gui/: __init__.py  app.py  components.py  styles.py
src/gui/panels/: __init__.py  calibration_panel.py  lens_panel.py  processor_panel.py  viewer_panel.py  zone_panel.py
tests/: __init__.py
