[project]
name = "dadbot"
version = "0.1.0"
description = "Traffic monitoring system for residential street footage using Roboflow and Supervision"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inference>=0.38.0",
    "supervision>=0.25.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
dadbot = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
